# virgil-noisesocket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/client/: CMakeLists.txt  client.c
examples/server/: CMakeLists.txt  server.c
include/: virgil-noisesocket.h
include/virgil-noisesocket/: cache.h  client.h  credentials.h  data.h  general.h  results.h  server.h  storage.h  ticket.h
include/virgil-noisesocket/private/: common.h  debug.h
protobuf/: meta.proto  registration.proto
scripts/: prepare-centos7.sh
src/: client.cpp  common.c  common.cpp  data.c  server.c  server.cpp  storage.c
tests/: CMakeLists.txt  connection.c  main.c  registration.c  storage.c
